--- a/.github/workflows/Windows 10 - RustDesk(6H).yml
+++ b/.github/workflows/Windows 10 - RustDesk(6H).yml
@@ -1,22 +1,18 @@
-name: Windows - Anydesk RDP
+name: Install and Configure Chrome Remote Desktop
 
 on:
   workflow_dispatch:
 
 jobs:
   build:
-    name: Built Connection
+    name: Install Chrome Remote Desktop
     runs-on: windows-latest
-    timeout-minutes: 9999
-    
+
     steps:
-      - name: Downloading & Installing Essentials
+      - name: Download Chrome Remote Desktop Installer
         run: |
-          Invoke-WebRequest -Uri "https://www.dropbox.com/s/ei73gt7vevxck2t/Downloads.bat?dl=1" -OutFile "Downloads.bat"
-          cmd /c Downloads.bat
+          Invoke-WebRequest -Uri "https://dl.google.com/chrome-remote-desktop/chromeremotedesktophost.msi" -OutFile "chromeremotedesktophost.msi"
 
-      - name: Log In To AnyDesk
-        run: cmd /c start.bat
-
-      - name: Time Counter
-        run: Start-Sleep -Seconds 21600
+      - name: Install Chrome Remote Desktop
+        run: |
+          msiexec /i "chromeremotedesktophost.msi" /quiet
